--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -343,8 +343,120 @@
                                         <div class="cus_acnt__user-head--label">Choose a plan</div>
                                         <div class="cus_acnt__user-head--sub-text">You will be asked to confirm before purchasing. </div>
                                     </div>
+
+                                    <div class="cus_acnt__plan-table js-tableView" id="currentPlanStats"
+                                        data-cardsupplied="{{cardSupplied}}"
+                                        data-currentUsers="{{managedUserCount}}"
+                                        data-currentPeriod="{{pwstats['period']}}"
+                                        data-currentCost="{{pwstats['plan_value']}}"
+                                        data-currentType="{{pwstats['type']}}"
+                                        data-expiry="{{pwstats['expiry_date']}}"
+                                        data-currentplanperiodcount="{{pwstats['period_count']}}>
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Plan name</th>
+                                                        <th colspan="3">Cost</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for plan in plans %}
+                                                        
+                                                        {# {% if pwstats['status'] != 'paid' and pwstats['status'] != 'trial' %} #}
+                                                        {% set description = plan.description | split("!*!") %}
+
+                                                        {% set data = _AppHelper.jsonDecode( description[0] ) %}
+                                                        {% if data['showplan'] is defined and data['showplan'] == false %}
+                                                            {% set continue = true %}
+                                                        {% endif %}
+
+                                                        {% set userCount = plan.user_count %}
+                                                        {% set planCost = plan.plan_value / 100 %}
+                                                        {% if planCost == 19.89 %}
+                                                            {% set planCost = 19.90 %}
+                                                        {% endif %}
+
+                                                        {% set planPeriod = plan.period %}
+                                                        {% set planPeriodCount = "" %}
+
+                                                        {% if plan.period_count > 1 %}
+                                                            {% set planPeriodCount = plan.period_count ~ " " %}
+                                                            {% set planPeriod = plan.period ~ 's' %}
+                                                        {% endif %}
+
+                                                        <tr class="view">
+                                                            <td>
+                                                                <span class="cus_acnt__plan-table--title">{{plan.plan_name}}</span>
+                                                            </td>
+                                                            {% if plan.type != 'signup' %}
+                                                                <p class="plans__price"></p>
+                                                            
+                                                                <td>
+                                                                    <span class="cus_acnt__plan-table--price">{{plan.currency|replace({"AUD": "$", "NZD": "$", "GBP": "£", "USD": "$", "EUR": "€"})}}{{planCost|number_format(2, '.', ',')}}({{plan.currency|raw}})<br />
+                                                                                    / {{planPeriodCount}}{{planPeriod}}</span>
+                                                                </td>
+                                                            {% endif %}
+                                                            
+                                                            <td>
+                                                                <span class="cus_acnt__plan-table--feature js-toggleTableRow">View features</span>
+                                                            </td>
+                                                            <td>
+                                                                <a href="javascript:;" class="cus_acnt__plan-table--purchase">Purchase</a>
+                                                            </td>
+                                                        </tr>
+                                                        <tr class="folded">
+                                                            <td colspan="4">
+                                                                <div class="users-feature__list">
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+
+                                                        <div class="{% if plan.guid != pwstats['plan_guid'] %} j-setplan {% else %}plans__current{% endif %} plans__item" style="cursor:hand; cursor:pointer;"
+                                                            data-planid          = "{{plan.guid}}"
+                                                            data-planusercount   = "{{userCount}}"
+                                                            data-plancost        = "{{plan.plan_value}}"
+                                                            data-planperiod      = "{{plan.period}}"
+                                                            data-trialstatus     = "{{plan['trial_status']}}"
+                                                            data-planType        = "{{plan.type}}"
+                                                            data-planPeriodCount = "{{plan.period_count}}"
+
+                                                        >
+                                                            <h3 class="plans__name"></h3>
+                                                            
+                                                            {% if plan.type == 'time' and userCount > 0 %}
+                                                                <p class="plans__usercount">{{userCount + 1}} Users</p>
+                                                            {% endif %}
+
+                                                            {% if plan.type != 'signup' %}
+                                                                <p class="plans__price">{{plan.currency|replace({"AUD": "$", "NZD": "$", "GBP": "£", "USD": "$", "EUR": "€"})}}{{planCost|number_format(2, '.', ',')}}({{plan.currency|raw}})<br />
+                                                                                    per {{planPeriodCount}}{{planPeriod}}</p>
+                                                            {% endif %}
+
+                                                        </div>
+                                                        {# {% endif %} #}
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
                                     
-                                    <div id="currentPlanStats" class="plans"
+                                    <div id="currentPlanStats" class="plans d-none"
                                         data-cardsupplied="{{cardSupplied}}"
                                         data-currentUsers="{{managedUserCount}}"
                                         data-currentPeriod="{{pwstats['period']}}"
@@ -354,51 +466,7 @@
                                         data-currentplanperiodcount="{{pwstats['period_count']}}">
 
                                         {% for plan in plans %}
-                                            {# {% if pwstats['status'] != 'paid' and pwstats['status'] != 'trial' %} #}
-                                            {% set description = plan.description | split("!*!") %}
-
-                                            {% set data = _AppHelper.jsonDecode( description[0] ) %}
-                                            {% if data['showplan'] is defined and data['showplan'] == false %}
-                                                {% set continue = true %}
-                                            {% endif %}
-
-                                            {% set userCount = plan.user_count %}
-                                            {% set planCost = plan.plan_value / 100 %}
-                                            {% if planCost == 19.89 %}
-                                                {% set planCost = 19.90 %}
-                                            {% endif %}
-
-                                            {% set planPeriod = plan.period %}
-                                            {% set planPeriodCount = "" %}
-
-                                            {% if plan.period_count > 1 %}
-                                                {% set planPeriodCount = plan.period_count ~ " " %}
-                                                {% set planPeriod = plan.period ~ 's' %}
-                                            {% endif %}
-
-                                            <div class="{% if plan.guid != pwstats['plan_guid'] %} j-setplan {% else %}plans__current{% endif %} plans__item" style="cursor:hand; cursor:pointer;"
-                                                data-planid          = "{{plan.guid}}"
-                                                data-planusercount   = "{{userCount}}"
-                                                data-plancost        = "{{plan.plan_value}}"
-                                                data-planperiod      = "{{plan.period}}"
-                                                data-trialstatus     = "{{plan['trial_status']}}"
-                                                data-planType        = "{{plan.type}}"
-                                                data-planPeriodCount = "{{plan.period_count}}"
-
-                                            >
-                                                <h3 class="plans__name">{{plan.plan_name}}</h3>
-                                                
-                                                {% if plan.type == 'time' and userCount > 0 %}
-                                                    <p class="plans__usercount">{{userCount + 1}} Users</p>
-                                                {% endif %}
-
-                                                {% if plan.type != 'signup' %}
-                                                    <p class="plans__price">{{plan.currency|replace({"AUD": "$", "NZD": "$", "GBP": "£", "USD": "$", "EUR": "€"})}}{{planCost|number_format(2, '.', ',')}}({{plan.currency|raw}})<br />
-                                                                        per {{planPeriodCount}}{{planPeriod}}</p>
-                                                {% endif %}
-
-                                            </div>
-                                            {# {% endif %} #}
+                                            
                                         {% endfor %}
                                     </div>
                                 </div>
