--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -385,7 +385,7 @@
                                                             {% set planPeriod = plan.period ~ 's' %}
                                                         {% endif %}
 
-                                                        <tr class="view {% if plan.guid = pwstats['plan_guid'] %} active {% endif %}">
+                                                        <tr class="view">
                                                             <td>
                                                                 <span class="cus_acnt__plan-table--title">{{plan.plan_name}}</span>
                                                             </td>
@@ -434,17 +434,6 @@
                                                                 </div>
                                                             </td>
                                                         </tr>
-
-                                                        <div class="{% if plan.guid != pwstats['plan_guid'] %} j-setplan {% else %}plans__current{% endif %} plans__item" style="cursor:hand; cursor:pointer;"
-                                                            data-planid          = "{{plan.guid}}"
-                                                            data-planusercount   = "{{userCount}}"
-                                                            data-plancost        = "{{plan.plan_value}}"
-                                                            data-planperiod      = "{{plan.period}}"
-                                                            data-trialstatus     = "{{plan['trial_status']}}"
-                                                            data-planType        = "{{plan.type}}"
-                                                            data-planPeriodCount = "{{plan.period_count}}"
-
-                                                        ></div>
                                                         {# {% endif %} #}
                                                     {% endfor %}
                                                 </tbody>
