--- a/static/sass/_cus_acnt_page.scss
+++ b/static/sass/_cus_acnt_page.scss
@@ -662,6 +662,7 @@
           text-decoration: none;
           background-color: $blue_sh5;
           color: $white;
+          width: 100px;
         }
 
         .active {
