--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -344,7 +344,108 @@
                                         <div class="cus_acnt__user-head--sub-text">You will be asked to confirm before purchasing. </div>
                                     </div>
 
-                                    
+                                    <div class="cus_acnt__plan-table js-tableView" id="currentPlanStats"
+                                        data-cardsupplied="{{cardSupplied}}"
+                                        data-currentUsers="{{managedUserCount}}"
+                                        data-currentPeriod="{{pwstats['period']}}"
+                                        data-currentCost="{{pwstats['plan_value']}}"
+                                        data-currentType="{{pwstats['type']}}"
+                                        data-expiry="{{pwstats['expiry_date']}}"
+                                        data-currentplanperiodcount="{{pwstats['period_count']}}">
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Plan name</th>
+                                                        <th colspan="3">Cost</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for plan in plans %}
+                                                        
+                                                        {# {% if pwstats['status'] != 'paid' and pwstats['status'] != 'trial' %} #}
+                                                        {% set description = plan.description | split("!*!") %}
+
+                                                        {% set data = _AppHelper.jsonDecode( description[0] ) %}
+                                                        {% if data['showplan'] is defined and data['showplan'] == false %}
+                                                            {% set continue = true %}
+                                                        {% endif %}
+
+                                                        {% set userCount = plan.user_count %}
+                                                        {% set planCost = plan.plan_value / 100 %}
+                                                        {% if planCost == 19.89 %}
+                                                            {% set planCost = 19.90 %}
+                                                        {% endif %}
+
+                                                        {% set planPeriod = plan.period %}
+                                                        {% set planPeriodCount = "" %}
+
+                                                        {% if plan.period_count > 1 %}
+                                                            {% set planPeriodCount = plan.period_count ~ " " %}
+                                                            {% set planPeriod = plan.period ~ 's' %}
+                                                        {% endif %}
+
+                                                        <tr class="{% if plan.guid == pwstats['plan_guid'] %} active {% endif %} view"
+                                                            data-planid          = "{{plan.guid}}"
+                                                            data-planusercount   = "{{userCount}}"
+                                                            data-plancost        = "{{plan.plan_value}}"
+                                                            data-planperiod      = "{{plan.period}}"
+                                                            data-trialstatus     = "{{plan['trial_status']}}"
+                                                            data-planType        = "{{plan.type}}"
+                                                            data-planPeriodCount = "{{plan.period_count}}">
+                                                            <td>
+                                                                <span class="cus_acnt__plan-table--title">{{plan.plan_name}}</span>
+                                                            </td>
+                                                            {% if plan.type != 'signup' %}                                                            
+                                                                <td>
+                                                                    <span class="cus_acnt__plan-table--price">
+                                                                    {{plan.currency|replace({"AUD": "$", "NZD": "$", "GBP": "£", "USD": "$", "EUR": "€"})}}{{planCost|number_format(2, '.', ',')}}
+                                                                                    /{{planPeriodCount}}{{planPeriod}}</span>
+                                                                </td>
+                                                                {% else %}
+                                                                <td>
+                                                                    <span class="cus_acnt__plan-table--price">Free</span>
+                                                                </td>
+                                                            {% endif %}
+                                                            
+                                                            <td>
+                                                                <span class="cus_acnt__plan-table--feature js-toggleTableRow">View features</span>
+                                                            </td>
+                                                            <td>
+                                                                {% if plan.guid != pwstats['plan_guid'] %}
+                                                                    <a href="javascript:;" class="cus_acnt__plan-table--purchase j-setplan">Purchase</a>
+                                                                {% else %}
+                                                                    <a href="javascript:;" class="cus_acnt__plan-table--purchase">Your Plan</a>
+                                                                {% endif %}
+                                                            </td>
+                                                        </tr>
+                                                        <tr class="folded">
+                                                            <td colspan="4">
+                                                                <div class="users-feature__list">
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                    <ul>
+                                                                        <li>News, sport and local events</li>
+                                                                        <li>Access to all articles online</li>
+                                                                        <li>Save $15</li>
+                                                                    </ul>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        {# {% endif %} #}
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
