--- a/partials/article/paywall_article_notice.twig
+++ b/partials/article/paywall_article_notice.twig
@@ -3,7 +3,7 @@
     <div class="c-article__paywalled-view">
         <div class="o-paywalled">
             <div class="o-paywalled__head">
-                To read the full story subscribe to {{networkData.title}}   .
+                To read the full story, subscribe to {{networkData.title}}.
             </div>
             <div class="o-paywalled__period">
                 <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions" class="o-paywalled__text">Click here</a>
