--- a/static/sass/components/_component.signin-modal.scss
+++ b/static/sass/components/_component.signin-modal.scss
@@ -100,6 +100,10 @@
             + .login-form__button {
                 margin-left: 10px;
             }
+
+            &.fullwidth {
+                width: 100%;
+            }
         }
     }
 
