--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -84,7 +84,7 @@
                                         <input type="hidden" name="profileImage" id="userProfileImage" value="" />
 
                                         {# FIRST NAME #}
-                                        <div class="cus_acnt__form__group  has-error">
+                                        <div class="cus_acnt__form__group">
                                             <label class="cus_acnt__form__label c-account-form__label" for="first-name">First name</label>
                                             <input id="first-name" class="cus_acnt__form__input cus_acnt__form__input--bordered c-account-form__input" name="firstname" placeholder="Full Name" aria-required="true" type="text" value="{{user.firstname}}">
                                             <div class="cus_acnt__form__help-block"></div>
