--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -244,7 +244,7 @@
         id              : article.socialId,
         guid            : article.socialGuid,
         social          : isArticle,
-        target          : "",
+        target          : "_self",
     } %}
 
 
